@@ -1,8 +1,9 @@
 Version 8.15 (Unreleased)
 -------------------------
-- Added overview for a release to view a breakdown of files changes, commit authors, new issues, and issues resolved
 
+- Added overview for a release to view a breakdown of files changes, commit authors, new issues, and issues resolved
 - Refactor usage of ``sentry.app`` to use individual modules.
+- Implemented ``--concurrency` on `sentry cleanup`
 
 API Changes
 ~~~~~~~~~~~
